# uttt

./: CMakeLists.txt
include/: common.h  ia.h  model.h  view.h
src/: CMakeLists.txt  ia.c  model.c  utictactoe.c  view.c
